fix container padding on mobile

--- a/src/assets/scss/abstracts/_variables.scss
+++ b/src/assets/scss/abstracts/_variables.scss
@@ -55,4 +55,4 @@ $card-bg: 'none';
 $card-border-width: 0;
 $card-cap-bg: 'none';
 
-$container-padding-x: map-get($spacers, 4);
+$container-padding-x: map-get($spacers, 5);
